Bug 41476 - Address issues found by "findbugs" static analysis tool These include incorrect locking, forgetting to close streams, unused variables, etc.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/trunk@500382 13f79535-47bb-0310-9956-ffa450edef68